--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,4 +8,10 @@ html
 
 	body
 		.container 
+			header
+				h1.text-center Kàn Kan Kǎ
 			= yield
+			footer.text-center
+				| Chinese-English dictionary provided by 
+				a href="http://www.mdbg.net/chindict/chindict.php"
+					| MDBG
