--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -6,6 +6,5 @@
 	p 
 	p = link_to 'practice now', random_cards_path, class: 'btn btn-lg btn-primary'
 		
-	p.hidden You already know Mandarin? Help us by classifying characters
-	p.hidden	
-		a.btn.btn-primary help now
+	p You already know Mandarin? Help us by classifying characters
+	p = link_to 'help now', next_categorize_index_path, class: 'btn btn-lg btn-primary'
