--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,3 +15,4 @@ html
 				| Chinese-English dictionary provided by 
 				a href="http://www.mdbg.net/chindict/chindict.php"
 					| MDBG
+		= render 'layouts/ga'
