--- a/app/views/categorize/next.html.slim
+++ b/app/views/categorize/next.html.slim
@@ -1,5 +1,5 @@
 #card
-	h1.text-center Do you know this word?
+	h1.text-center How would you rate this word?
 	.well.text-center
 		p.chinese = @word.mandarin_simplified
 		p
