--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,7 @@ html
 
 	body
 		.container 
-			header
+			= render 'layouts/nav'
 			= yield
 			footer.text-center
 				| Chinese-English dictionary provided by 
