--- a/app/views/cards/random.html.slim
+++ b/app/views/cards/random.html.slim
@@ -1,5 +1,5 @@
 #card
-	h1.text-center Do you know this word?
+	h1.text-center Do you know this word? level: #{@level}
 	.well.text-center
 		p.chinese = @word.mandarin_simplified
 		p
@@ -11,8 +11,8 @@
 		a#reveal.btn.btn-lg.btn-primary SHOW ME
 
 	.answer.hidden.btn-group.btn-group-justified
-		= link_to right_card_path(@word, size: @size), method: :post, class: 'btn btn-lg btn-success' do
+		= link_to right_card_path(@word, size: @size, level: @level), method: :post, class: 'btn btn-lg btn-success' do
 			span.glyphicon.glyphicon-thumbs-up
-		= link_to wrong_card_path(@word, size: @size), method: :post, class: 'btn btn-lg btn-danger' do
+		= link_to wrong_card_path(@word, size: @size, level: @level), method: :post, class: 'btn btn-lg btn-danger' do
 			span.glyphicon.glyphicon-thumbs-down
 
