remove test artifact

--- a/app/views/cards/random.html.slim
+++ b/app/views/cards/random.html.slim
@@ -1,5 +1,5 @@
 #card
-	h1.text-center Do you know this word? level: #{@level}
+	h1.text-center Do you know this word?
 	.well.text-center
 		p.chinese = @word.mandarin_simplified
 		p
