--- a/app/assets/stylesheets/feedbacks.css.scss
+++ b/app/assets/stylesheets/feedbacks.css.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the feedbacks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#new_feedback {
+	.rating {
+	    overflow: hidden;
+	    display: inline-block;
+	}
+	.rating-input {
+	    position: absolute;
+	    left: 0;
+	    top: -50px;
+	}
+	.rating:hover .rating-star:hover,
+	.rating:hover .rating-star:hover ~ .rating-star,
+	.rating-input:checked ~ .rating-star {
+	    background-position: 0 0;
+	}
+	.rating-star,
+	.rating:hover .rating-star {
+	    float: right;
+	    display: block;
+	    width: 16px;
+	    height: 16px;
+	    background: url('http://kubyshkin.ru/samples/star-rating/star.png') 0 -16px;
+	}	
+}
