use a gem instead of my own pinyin parser

--- a/app/views/cards/show.html.slim
+++ b/app/views/cards/show.html.slim
@@ -5,7 +5,7 @@
 		p
 			.answer.pinyin.hidden = @word.accented_pinyin
 		p
-			.answer.english.hidden = @word.english
+			.answer.english.hidden = @word.english_with_pinyin
 
 	.btn-group.btn-group-justified
 		a#reveal.btn.btn-lg.btn-primary SHOW ME
