--- a/app/views/layouts/_nav.html.slim
+++ b/app/views/layouts/_nav.html.slim
@@ -13,15 +13,14 @@ nav.navbar.navbar-inverse role="navigation"
     .collapse.navbar-collapse#bs-example-navbar-collapse-1
       ul.nav.navbar-nav
         li = link_to 'Practice', random_cards_path
-        li = link_to 'Help', next_categorize_index_path
-        li.dropdown
-          a.dropdown-toggle href="#" data-toggle="dropdown" 
-            | Level 
-            b.caret
-          ul.dropdown-menu
-            li = link_to 'Beginner', random_cards_path(level: 1)
-            li = link_to 'Intermediate', random_cards_path(level: 2)
-            li = link_to 'Expert', random_cards_path(level: 3)
+        / li.dropdown
+        /   a.dropdown-toggle href="#" data-toggle="dropdown" 
+        /     | Level 
+        /     b.caret
+        /   ul.dropdown-menu
+        /     li = link_to 'Beginner', random_cards_path(level: 1)
+        /     li = link_to 'Intermediate', random_cards_path(level: 2)
+        /     li = link_to 'Expert', random_cards_path(level: 3)
 
       ul.nav.navbar-nav.navbar-right
         li = link_to 'feedback', new_feedback_path
