--- a/app/views/cards/show.html.slim
+++ b/app/views/cards/show.html.slim
@@ -8,11 +8,13 @@
 			.answer.english.hidden = @word.english
 
 	.btn-group.btn-group-justified
-		a#reveal.btn.btn-lg.btn-primary SHOW ME
+		a#reveal.btn.btn-lg.btn-primary SHOW ME ( spacebar )
 
 	.answer.hidden.btn-group.btn-group-justified
-		= link_to right_card_path(@word), method: :post, class: 'btn btn-lg btn-success' do
+		= link_to right_card_path(@word), method: :post, class: 'btn btn-lg btn-success', id: 'btn-right' do
 			span.glyphicon.glyphicon-thumbs-up
-		= link_to wrong_card_path(@word), method: :post, class: 'btn btn-lg btn-danger' do
+			|  ( y )
+		= link_to wrong_card_path(@word), method: :post, class: 'btn btn-lg btn-danger', id: 'btn-wrong' do
 			span.glyphicon.glyphicon-thumbs-down
+			|  ( n )
 
