--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -5,3 +5,8 @@
 	p Your Mandarin flashcards
 	p 
 	p = link_to 'practice now', random_cards_path, class: 'btn btn-lg btn-primary'
+
+footer.text-center
+	| Chinese-English dictionary provided by 
+	a href="http://www.mdbg.net/chindict/chindict.php"
+		| MDBG
