--- a/app/assets/stylesheets/card.css.scss
+++ b/app/assets/stylesheets/card.css.scss
@@ -34,14 +34,15 @@
 		// font-size: 24px;
 	}
 
-	// adjective
 	.adjective, 
 	.adjective-as-adverbial, 
 	.adjective-morpheme, 
 	.adjective-with-nominal-function, 
 	.adjective-with-nominal-function, 
 	.non-predicate-adjective, 
-	.non-predicate-adjective-morpheme {
+	.non-predicate-adjective-morpheme,
+	.descriptive,
+	.descriptive-morpheme {
 		background-color: yellow;
 	} 
 
@@ -54,7 +55,6 @@
 	.adverb-morpheme {
 		background-color: orange;
 	}
-	// dg: '',
 	// e: 'interjection',
 	// ew: 'sentential punctuation',
 	// f: 'directional locality',
@@ -102,8 +102,6 @@
 	// x: 'unclassified items',
 	// y: 'modal particle ',
 	// yg: 'modal particle morpheme',
-	// z: 'descriptive',
-	// zg: 'descriptive morpheme'}
 
 
 }
